--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^5.1.0",
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
