--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+REACT_APP_REDUX_STORAGE_KEY=zenmoney-stocks
+
 REACT_APP_ZENMONEY_CONSUMER_KEY=
 REACT_APP_ZENMONEY_CONSUMER_SECRET=
 REACT_APP_ZENMONEY_REDIRECT_URL=
