--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
+    "redux-localstorage": "^1.0.0-rc5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
