--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-localstorage": "^1.0.0-rc5",
+    "redux-repository": "^0.4.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
