--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^4.0.1",
     "redux-localstorage": "^1.0.0-rc5",
     "redux-repository": "^0.4.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
