--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash": "^4.17.11",
+    "firebase": "^5.5.9",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.0",
+    "react-redux-firebase": "^2.2.2",
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-localstorage": "^1.0.0-rc5",
     "redux-repository": "^0.4.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
