--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "zenmoney-stocks",
   "version": "0.2.0",
   "license": "MIT",
+  "scripts": {
+    "build": "react-scripts build",
+    "flow": "flow",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.5.9",
@@ -16,14 +22,8 @@
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "flow-bin": "^0.87.0"
   },
   "browserslist": [
     ">0.2%",
@@ -31,5 +31,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "homepage": "./"
 }
