chore: rename project to Portfolio

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ZM Stocks",
-  "name": "ZenMoney Stocks",
+  "short_name": "Portfolio",
+  "name": "Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
