--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "firebase": "^5.5.9",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-redux": "^5.1.0",
-    "react-redux-firebase": "^2.2.2",
-    "react-scripts": "2.1.1",
+    "firebase": "^5.8.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.6",
+    "react-scripts": "^2.1.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-repository": "^0.4.3",
+    "redux-repository": "^0.4.5",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "flow-bin": "^0.87.0"
+    "flow-bin": "^0.92.0"
   },
   "browserslist": [
     ">0.2%",
