--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.3.0",
   "license": "MIT",
   "scripts": {
-    "build": "react-scripts build",
-    "flow": "flow",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "lint": "eslint src"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -15,7 +12,6 @@
     "react-dom": "^16.7.0",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
-    "react-scripts": "^2.1.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-repository": "^0.4.5",
@@ -23,7 +19,23 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "flow-bin": "^0.92.0"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-typescript": "^4.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "browserslist": [
     ">0.2%",
