configure ESLint and TypeScript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,29 @@
 {
+  "env": {
+    "browser": true,
+    "jest": true
+  },
   "extends": [
     "airbnb-typescript"
   ],
-  "parser": "@typescript-eslint/parser"
+  "parser": "@typescript-eslint/parser",
+  "rules": {
+    "import/prefer-default-export": "warning",
+    "max-len": [
+      "error",
+      {
+        "code": 120,
+        "ignoreTemplateLiterals": true
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": [
+          "src"
+        ]
+      }
+    }
+  }
 }
