--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.3.0",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint src"
+    "lint": "eslint --ext ts,tsx src",
+    "tsc": "tsc"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,6 +23,9 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.22",
+    "@types/recompose": "^0.30.6",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-jest": "^24.8.0",
