--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "license": "MIT",
   "scripts": {
+    "ci": "npm run lint && npm run tsc",
     "lint": "eslint --ext ts,tsx src",
     "tsc": "tsc"
   },
