--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,16 +4,26 @@
     "jest": true
   },
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "airbnb-typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
-    "import/prefer-default-export": "warning",
+    "import/prefer-default-export": "warn",
     "max-len": [
       "error",
       {
         "code": 120,
         "ignoreTemplateLiterals": true
+      }
+    ],
+    "sort-keys": [
+      "error",
+      "asc",
+      {
+        "caseSensitive": false,
+        "natural": true
       }
     ]
   },
