make ESLint rules stricter and fix new errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,14 @@
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true,
+        "allowHigherOrderFunctions": true,
+        "allowTypedFunctionExpressions": true
+      }
+    ],
     "import/prefer-default-export": "warn",
     "max-len": [
       "error",
