--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.idea/workspace.xml
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+coverage/
+dist/
+node_modules/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
 .env.local
 .env.development.local
@@ -21,6 +13,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# IntelliJ IDEA
-.idea/workspace.xml
