configure deployment and dev server

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
-    "build:dev": "npm run build -- --mode development",
-    "ci": "npm run lint && npm run typecheck && npm run coverage && npm run build",
+    "build:dev": "npm run clean:build && webpack --mode development",
+    "ci": "npm run lint && npm run coverage && npm run build",
     "clean:build": "rm -rf dist",
     "clean:coverage": "rm -rf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
     "lint": "eslint --ext js,ts,tsx src webpack.config.js",
+    "start": "webpack-dev-server",
     "test": "jest",
     "test:coverage": "npm test -- --coverage",
     "test:update": "npm test -- --updateSnapshot",
@@ -42,6 +43,8 @@
     "@typescript-eslint/parser": "^1.11.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
+    "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -50,6 +53,7 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.2",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "typescript": "^3.5.2",
     "webpack": "^4.35.0",
