--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ dist/
 node_modules/
 
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
