--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ node_js:
   - "8"
   - "10"
 script: npm run ci
+deploy:
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  local_dir: dist
+  on:
+    branch: master
+  provider: pages
+  skip_cleanup: true
