--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "8"
   - "10"
 script: npm run ci
+after_script: npm run coveralls
 deploy:
   github_token: $GITHUB_TOKEN
   keep_history: true
