--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
-    "ci": "npm run lint && npm run coverage && npm run build",
+    "ci": "npm run lint && npm test && npm run build",
     "clean:build": "rm -rf dist",
     "clean:coverage": "rm -rf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint --ext js,ts,tsx src webpack.config.js",
     "start": "webpack-dev-server",
     "test": "jest",
@@ -44,6 +45,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
+    "coveralls": "^3.0.4",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
