--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.3.0",
-  "license": "MIT",
+  "description": "Portfolio App",
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
@@ -17,16 +17,26 @@
     "test:update": "npm test -- --updateSnapshot",
     "typecheck": "tsc"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/loginov-rocks/Portfolio.git"
+  },
+  "author": "Danila Loginov <danila@loginov.rocks> (https://loginov.rocks)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/loginov-rocks/Portfolio/issues"
+  },
+  "homepage": "https://loginov.rocks/Portfolio",
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^6.2.4",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^2.2.6",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-repository": "^0.4.5",
+    "redux-repository": "^0.4.9",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
@@ -53,7 +63,7 @@
     "eslint": "^6.0.1",
     "eslint-config-airbnb-typescript": "^4.0.0",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-jsx-a11y": "^6.2.2",
     "eslint-plugin-react": "^7.14.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
@@ -71,6 +81,7 @@
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
+    ],
+    "verbose": true
   }
 }
