--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/enzyme": "^3.9.4",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
@@ -77,7 +78,7 @@
       "src"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>src/setupTests.ts"
+      "<rootDir>src/setupTests.js"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
