--- a/functions/package.json
+++ b/functions/package.json
@@ -24,6 +24,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "actions-on-google": "^2.8.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0"
   },
