--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "npm run clean:coverage && npm run test:coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint --ext js,ts,tsx src webpack.config.js",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open",
     "test": "jest",
     "test:coverage": "npm test -- --coverage",
     "test:update": "npm test -- --updateSnapshot",
@@ -36,6 +36,7 @@
     "react-redux-firebase": "^2.2.6",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
+    "redux-firestore": "^0.8.0",
     "redux-repository": "^0.4.9",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
@@ -45,7 +46,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/enzyme": "^3.9.4",
+    "@types/enzyme": "^3.10.1",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
@@ -65,13 +66,13 @@
     "eslint": "^6.0.1",
     "eslint-config-airbnb-typescript": "^4.0.0",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "redux-mock-store": "^1.5.3",
     "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
+    "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
