--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ FIREBASE_DATABASE_URL=
 FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
+
+IEX_API_URL=
+IEX_PUBLISHABLE_TOKEN=
