--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "description": "Portfolio App",
   "scripts": {
-    "build": "npm run clean:build && webpack --mode development",
+    "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
     "ci": "npm run lint && npm test && npm run build",
     "clean:build": "rm -rf dist",
