--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "outDir": "lib",
-    "sourceMap": true,
-    "strict": true,
-    "target": "es2017"
-  },
-  "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+    "noEmit": true,
+    "strict": true
+  }
 }
