--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean:coverage": "rm -rf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint --ext js,ts,tsx src webpack.config.js",
+    "lint": "eslint --ext js,ts,tsx src types webpack.config.js",
     "start": "webpack-dev-server --open",
     "test": "jest",
     "test:coverage": "npm test -- --coverage",
@@ -28,6 +28,8 @@
   },
   "homepage": "https://loginov.rocks/Portfolio",
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "firebase": "^6.2.4",
     "react": "^16.8.6",
@@ -35,15 +37,16 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "recompose": "^0.30.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.2",
     "redux-firestore": "^0.8.0",
     "redux-repository": "^0.5.1",
     "redux-thunk": "^2.3.0",
+    "typeface-roboto": "0.0.54",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-env": "^7.5.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/enzyme": "^3.10.1",
@@ -59,6 +62,7 @@
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
     "coveralls": "^3.0.4",
+    "css-loader": "^3.0.0",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -68,11 +72,14 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "redux-mock-store": "^1.5.3",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.2",
+    "style-loader": "^0.23.1",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
