improve styling, update dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
-    "ci": "npm run lint && npm run typecheck && npm test && npm run build",
+    "ci": "npm run lint && npm run typecheck && npm test",
     "clean:build": "rm -rf dist",
     "clean:coverage": "rm -rf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
@@ -30,14 +30,16 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.0",
     "axios": "^0.19.0",
-    "firebase": "^6.2.4",
+    "classnames": "^2.2.6",
+    "firebase": "^6.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
-    "react-redux-firebase": "^2.2.6",
+    "react-redux-firebase": "^2.3.0",
     "recompose": "^0.30.0",
-    "redux": "^4.0.2",
+    "redux": "^4.0.4",
     "redux-firestore": "^0.8.0",
     "redux-persist": "^5.10.0",
     "redux-repository": "^0.5.1",
@@ -46,30 +48,31 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.2",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/enzyme": "^3.10.1",
+    "@types/classnames": "^2.2.9",
+    "@types/enzyme": "^3.10.2",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.1",
     "@types/recompose": "^0.30.6",
     "@types/redux-mock-store": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
-    "coveralls": "^3.0.4",
+    "coveralls": "^3.0.5",
     "css-loader": "^3.0.0",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb-typescript": "^4.0.0",
+    "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
