--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "portfolio",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Portfolio App",
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
     "ci": "npm run lint && npm run typecheck && npm test",
-    "clean:build": "rm -rf dist",
-    "clean:coverage": "rm -rf coverage",
+    "clean:build": "rimraf dist",
+    "clean:coverage": "rimraf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint --ext js,ts,tsx src types webpack.config.js",
@@ -81,10 +81,11 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "redux-mock-store": "^1.5.3",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "jest": {
