--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -3,6 +3,7 @@
     "jest": true
   },
   "extends": [
+    "eslint:recommended",
     "airbnb-base",
     "plugin:@typescript-eslint/recommended"
   ],
@@ -25,6 +26,13 @@
     ],
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-unused-vars": "error",
+    "arrow-parens": [
+      "error",
+      "as-needed",
+      {
+        "requireForBlockBody": false
+      }
+    ],
     "import/prefer-default-export": "warn",
     "max-len": [
       "error",
