implement Rates module

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 
+RATES_API_URL=
+
 IEX_API_URL=
 IEX_PUBLISHABLE_TOKEN=
