--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-firebase",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Portfolio Firebase",
   "main": "lib/index.js",
   "scripts": {
@@ -38,7 +38,8 @@
   "dependencies": {
     "actions-on-google": "^2.9.1",
     "firebase-admin": "^8.2.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "node-vibrant": "^3.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
