implement Firebase Functions Vibrant Palettes feature

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 
+FIREBASE_FUNCTIONS_URL=
+
 RATES_API_URL=
 
 IEX_API_URL=
