--- a/functions/package.json
+++ b/functions/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "actions-on-google": "^2.9.1",
+    "cors": "^2.8.5",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.1.0",
     "node-vibrant": "^3.1.3"
