first pass for Analytics charts

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.3.0",
+    "recharts": "^1.6.2",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.8.0",
@@ -58,6 +59,7 @@
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
+    "@types/recharts": "^1.1.20",
     "@types/recompose": "^0.30.6",
     "@types/redux-mock-store": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
