--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
+    "@typescript-eslint/ban-ts-ignore": "warn",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
