--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -12,6 +12,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/ban-ts-ignore": "warn",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
