--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,12 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "airbnb-typescript"
+    "airbnb"
   ],
   "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "warn",
     "@typescript-eslint/explicit-function-return-type": [
@@ -19,13 +22,33 @@
         "allowTypedFunctionExpressions": true
       }
     ],
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
     "@typescript-eslint/no-explicit-any": "error",
-    "import/prefer-default-export": "warn",
+    "@typescript-eslint/no-unused-vars": "error",
+    "arrow-parens": [
+      "error",
+      "as-needed",
+      {
+        "requireForBlockBody": false
+      }
+    ],
     "max-len": [
       "error",
       {
         "code": 120,
         "ignoreTemplateLiterals": true
+      }
+    ],
+    "react/jsx-filename-extension": [
+      "error",
+      {
+        "extensions": [
+          ".jsx",
+          ".tsx"
+        ]
       }
     ],
     "sort-keys": [
@@ -40,6 +63,12 @@
   "settings": {
     "import/resolver": {
       "node": {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ],
         "paths": [
           "src"
         ]
