Test vibrant palette feature, v0.2.1

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "noEmit": true,
+    "resolveJsonModule": true,
     "strict": true
   }
 }
