--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-firebase",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Portfolio Firebase",
   "main": "lib/index.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
+    "jest-express": "^1.10.1",
     "rimraf": "^3.0.0",
     "typescript": "^3.6.3"
   },
