--- a/package.json
+++ b/package.json
@@ -28,43 +28,43 @@
   },
   "homepage": "https://loginov.rocks/Portfolio",
   "dependencies": {
-    "@material-ui/core": "^4.3.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.3.0",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
-    "firebase": "^7.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "firebase": "^7.1.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-redux": "^5.1.1",
-    "react-redux-firebase": "^2.3.0",
-    "recharts": "^1.6.2",
+    "react-redux-firebase": "^2.4.1",
+    "recharts": "^1.7.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
     "redux-persist": "^6.0.0",
-    "redux-repository": "^0.6.0",
+    "redux-repository": "^0.6.1",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
-    "@types/jest": "^24.0.17",
-    "@types/react": "^16.8.25",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
-    "@types/recharts": "^1.1.20",
-    "@types/recompose": "^0.30.6",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/recharts": "^1.1.21",
+    "@types/recompose": "^0.30.7",
     "@types/redux-mock-store": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "babel-jest": "^24.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "coveralls": "^3.0.6",
@@ -72,23 +72,24 @@
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.0",
-    "eslint": "^6.1.0",
+    "enzyme-to-json": "^3.4.2",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "redux-mock-store": "^1.5.3",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "greenkeeper": {
     "ignore": [
