--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "recharts": "^1.8.5",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
-    "redux-firestore": "^0.10.0",
+    "redux-firestore": "^0.9.0",
     "redux-persist": "^6.0.0",
     "redux-repository": "^0.6.1",
     "redux-thunk": "^2.3.0",
@@ -94,7 +94,8 @@
   "greenkeeper": {
     "ignore": [
       "react-redux",
-      "react-redux-firebase"
+      "react-redux-firebase",
+      "redux-firestore"
     ]
   },
   "jest": {
