Update dependencies, fix new errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,16 @@
         "requireForBlockBody": false
       }
     ],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
     "max-len": [
       "error",
       {
