--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,8 +24,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: cd functions
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm run check
+    - run: npm run build
       env:
         CI: true
