--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@material-ui/styles": "^4.9.6",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^5.1.2",
     "react-redux-firebase": "^2.5.0",
+    "react-router-dom": "^5.1.2",
     "recharts": "^1.8.5",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
@@ -59,6 +60,7 @@
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/recharts": "^1.8.9",
     "@types/recompose": "^0.30.7",
     "@types/redux-mock-store": "^1.0.2",
