--- a/functions/package.json
+++ b/functions/package.json
@@ -5,10 +5,12 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run clean:build && npm run build:sources && npm run clean:tests",
+    "build:docs": "typedoc --out ../docs src",
     "build:sources": "babel src -d lib --extensions .ts",
     "check": "npm run lint && npm run typecheck && npm test",
     "clean:build": "rimraf lib",
     "clean:coverage": "rimraf coverage",
+    "clean:docs": "rimraf lib",
     "clean:tests": "rimraf lib/**/*.test.js",
     "coverage": "npm run clean:coverage && npm run test:coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
@@ -58,6 +60,8 @@
     "jest": "^25.5.3",
     "jest-express": "^1.12.0",
     "rimraf": "^3.0.2",
+    "typedoc": "^0.17.6",
+    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3"
   },
   "jest": {
