CI: Fix ci.yml take #3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
         working-directory: functions
       - name: Push coverage report to Coveralls
         uses: coverallsapp/github-action@master
+        working-directory: functions
         with:
-          base-path: functions
           github-token: ${{ secrets.GITHUB_TOKEN }}
