CI: Fix ci.yml take #4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
         working-directory: functions
       - name: Push coverage report to Coveralls
         uses: coverallsapp/github-action@master
-        working-directory: functions
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./functions/coverage/lcov.info
