--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,5 +1,9 @@
 version: 1
 update_configs:
-  - package_manager: "javascript"
-    directory: "functions"
-    update_schedule: "weekly"
+  - default_assignees:
+      - loginov-rocks
+    default_reviewers:
+      - loginov-rocks
+    directory: functions
+    package_manager: javascript
+    update_schedule: weekly
