--- a/functions/package.json
+++ b/functions/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "actions-on-google": "^2.12.0",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "firebase-admin": "^8.11.0",
     "firebase-functions": "^3.6.1",
@@ -47,6 +48,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/busboy": "^0.2.3",
     "@types/cors": "^2.8.6",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
