--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "@typescript-eslint/ban-ts-ignore": "warn",
+    "@typescript-eslint/ban-ts-comment": "warn",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
@@ -22,11 +22,7 @@
         "allowTypedFunctionExpressions": true
       }
     ],
-    "@typescript-eslint/indent": [
-      "error",
-      2
-    ],
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-use-before-define": "error",
     "@typescript-eslint/no-unused-vars": "error",
     "arrow-parens": [
       "error",
@@ -45,6 +41,7 @@
         "tsx": "never"
       }
     ],
+    "no-use-before-define": "off",
     "max-len": [
       "error",
       {
