--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@types/classnames": "^2.2.11",
+    "@types/d3-scale": "^3.2.2",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
