--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Firebase Configuration
 FIREBASE_API_KEY=
 FIREBASE_APD_ID=
 FIREBASE_AUTH_DOMAIN=
@@ -6,9 +7,12 @@ FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 
+# Firebase Functions API
 FIREBASE_FUNCTIONS_URL=
 
+# Rates API
 RATES_API_URL=
 
+# IEX API
 IEX_API_URL=
 IEX_PUBLISHABLE_TOKEN=
