--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,26 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      # Firebase Configuration
+      FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+      FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+      FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+      FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+      FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+      FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+
+      # Firebase Functions API
+      FIREBASE_FUNCTIONS_URL: ${{ secrets.FIREBASE_FUNCTIONS_URL }}
+
+      # Rates API
+      RATES_API_URL: ${{ secrets.RATES_API_URL }}
+
+      # IEX API
+      IEX_API_URL: ${{ secrets.IEX_API_URL }}
+      IEX_PUBLISHABLE_TOKEN: ${{ secrets.IEX_PUBLISHABLE_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
