--- a/web-app/.gitignore
+++ b/web-app/.gitignore
@@ -1,12 +1,6 @@
-.idea/shelf/
-.idea/workspace.xml
-
 coverage/
 dist/
 node_modules/
 
+# Environment file
 .env
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
