--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio-firebase",
-  "version": "0.2.2",
-  "description": "Portfolio Firebase",
+  "name": "@loginov-rocks/portfolio-firebase",
+  "version": "1.1.2",
+  "description": "Firebase",
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run clean:build && npm run build:sources && npm run clean:tests",
@@ -18,6 +18,7 @@
     "start": "npm run shell",
     "test": "jest",
     "test:coverage": "npm test -- --coverage",
+    "test:update": "npm test -- --updateSnapshot",
     "typecheck": "tsc"
   },
   "repository": {
@@ -26,12 +27,13 @@
   },
   "author": "Danila Loginov <danila@loginov.rocks> (https://loginov.rocks)",
   "license": "MIT",
+  "private": true,
   "bugs": {
     "url": "https://github.com/loginov-rocks/Portfolio/issues"
   },
-  "homepage": "https://loginov.rocks/Portfolio",
+  "homepage": "https://loginov-rocks.github.io/Portfolio/",
   "engines": {
-    "node": "10"
+    "node": "14"
   },
   "dependencies": {
     "actions-on-google": "^2.12.0",
@@ -42,25 +44,30 @@
     "node-vibrant": "^3.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/busboy": "^0.2.3",
-    "@types/cors": "^2.8.6",
-    "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "jest": "^26.0.1",
+    "@types/cors": "^2.8.10",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "jest-express": "^1.12.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.3"
   },
   "jest": {
-    "verbose": true
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.ts"
+    ],
+    "modulePaths": [
+      "<rootDir>/src/"
+    ]
   }
 }
