--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@loginov-rocks/portfolio",
+  "name": "@loginov-rocks/portfolio-web-app",
   "version": "1.1.2",
-  "description": "Portfolio App",
+  "description": "Web App",
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
     "build:dev": "npm run clean:build && webpack --mode development",
     "clean:build": "rimraf dist",
     "clean:coverage": "rimraf coverage",
     "coverage": "npm run clean:coverage && npm run test:coverage",
-    "lint": "eslint --ext js,ts,tsx src types webpack.config.js",
+    "lint": "eslint --ext ts,tsx src types webpack.config.js",
     "start": "webpack serve --mode development",
     "test": "jest",
     "test:coverage": "npm test -- --coverage",
@@ -27,77 +27,80 @@
   },
   "homepage": "https://loginov-rocks.github.io/Portfolio/",
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "firebase": "^8.2.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-redux-firebase": "^3.9.0",
+    "firebase": "^8.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "recharts": "^2.0.3",
+    "recharts": "^2.0.8",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "redux-persist": "^6.0.0",
-    "redux-repository": "^0.6.2",
+    "redux-repository": "^0.6.3",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "1.1.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/classnames": "^2.2.11",
     "@types/d3-scale": "^3.2.2",
     "@types/enzyme": "^3.10.8",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.15",
+    "@types/jest": "^26.0.22",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/recharts": "^1.8.19",
     "@types/recompose": "^0.30.7",
     "@types/redux-mock-store": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "dotenv-webpack": "^6.0.0",
+    "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.0",
+    "dotenv-webpack": "^7.0.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
+    "typescript": "^4.2.3",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.{ts,tsx}"
+    ],
     "modulePaths": [
       "<rootDir>/src/"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
+      "<rootDir>/src/setupTests.ts"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
