Deploy web-app to Firebase hosting instead of GitHub Pages take 2

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: web-app-dist
-          path: dist
+          path: web-app/dist
 
   firebase-cd:
     name: Firebase CD
