Deploy web-app to Firebase hosting instead of GitHub Pages take 3

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -84,6 +84,6 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: web-app-dist
-          path: dist
+          path: firebase/dist
       - run: npm install -g firebase-tools
       - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
