Migrate to Firebase Hosting, v1.1.4

--- a/web-app/public/manifest.json
+++ b/web-app/public/manifest.json
@@ -15,8 +15,7 @@
   ],
   "lang": "en",
   "name": "Portfolio",
-  "scope": "./",
   "short_name": "Portfolio",
-  "start_url": "./",
+  "start_url": ".",
   "theme_color": "#03a9f4"
 }
