--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,10 +48,11 @@ jobs:
       - run: npm run typecheck
       - run: npm test
       - run: npm run build
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v2
         with:
           name: web-app-dist
           path: web-app/dist
+          retention-days: 1
 
   firebase-cd:
     name: Firebase CD
@@ -66,6 +67,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: web-app-dist
+          path: firebase/dist
       - uses: actions/setup-node@v2
         with:
           # last version
@@ -81,9 +86,5 @@ jobs:
         working-directory: firebase/functions
       - run: npm run build
         working-directory: firebase/functions
-      - uses: actions/download-artifact@master
-        with:
-          name: web-app-dist
-          path: firebase/dist
       - run: npm install -g firebase-tools
       - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
