--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loginov-rocks/portfolio-firebase",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Firebase",
   "main": "lib/index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/loginov-rocks/Portfolio/issues"
   },
-  "homepage": "https://loginov-rocks.github.io/Portfolio/",
+  "homepage": "https://loginov-rocks-portfolio.firebaseapp.com",
   "engines": {
     "node": "14"
   },
