--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loginov-rocks/portfolio-web-app",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Web App",
   "scripts": {
     "build": "npm run clean:build && webpack --mode production",
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/loginov-rocks/Portfolio/issues"
   },
-  "homepage": "https://loginov-rocks.github.io/Portfolio/",
+  "homepage": "https://loginov-rocks-portfolio.firebaseapp.com",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
