Move Firestore definitions to a separate package

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,8 +7,30 @@ on:
 
 jobs:
 
+  shared-cd:
+    name: Shared CD
+
+    defaults:
+      run:
+        working-directory: shared
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          # last version
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm run lint
+      - run: npm run typecheck
+
   web-app-cd:
     name: Web App CD
+    needs:
+      - shared-cd
 
     defaults:
       run:
@@ -57,6 +79,7 @@ jobs:
   firebase-cd:
     name: Firebase CD
     needs:
+      - shared-cd
       - web-app-cd
 
     defaults:
