--- a/.github/workflows/firebase-ci.yml
+++ b/.github/workflows/firebase-ci.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - run: npm pack ../../shared && mv loginov-rocks-portfolio-shared-*.tgz loginov-rocks-portfolio-shared.tgz
+        working-directory: firebase/functions
       - run: npm ci
         working-directory: firebase/functions
       - run: npm run lint
