--- a/.github/workflows/firebase-ci.yml
+++ b/.github/workflows/firebase-ci.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      # Use "install" instead of "ci" to trigger "preinstall" script.
+      - run: npm install
         working-directory: firebase/functions
       - run: npm run lint
         working-directory: firebase/functions
