--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -12,7 +12,6 @@
     "deploy": "firebase deploy --only functions",
     "lint": "eslint --ext ts src webpack.config.js",
     "logs": "firebase functions:log",
-    "preinstall": "npm install --prefix ../../shared && npm run build --prefix ../../shared && npm pack ../../shared && mv loginov-rocks-portfolio-shared-*.tgz local_modules/loginov-rocks-portfolio-shared.tgz",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -36,7 +35,7 @@
     "node": "14"
   },
   "dependencies": {
-    "@loginov-rocks/portfolio-shared": "file:local_modules/loginov-rocks-portfolio-shared.tgz",
+    "@loginov-rocks/portfolio-shared": "file:../../shared",
     "@google-cloud/storage": "^5.8.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
