--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -100,8 +100,7 @@ jobs:
           # last version
           node-version: 14
           registry-url: https://registry.npmjs.org/
-      # Use "install" instead of "ci" to trigger "preinstall" script.
-      - run: npm install
+      - run: npm ci
         working-directory: firebase/functions
       - run: npm run lint
         working-directory: firebase/functions
