--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -5,6 +5,11 @@
   },
   "functions": {
     "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR/../../shared\" ci",
+      "npm --prefix \"$RESOURCE_DIR/../../shared\" run build",
+      "npm pack \"$RESOURCE_DIR/../../shared\"",
+      "mv loginov-rocks-portfolio-shared-*.tgz \"$RESOURCE_DIR/loginov-rocks-portfolio-shared.tgz\"",
+      "npm --prefix \"$RESOURCE_DIR\" install \"$RESOURCE_DIR/loginov-rocks-portfolio-shared.tgz\"",
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run typecheck",
       "npm --prefix \"$RESOURCE_DIR\" test",
